Init system, GameStates & Enhanced SceneManager

--- a/GameState/EnhancedFramework.GameStates.asmdef
+++ b/GameState/EnhancedFramework.GameStates.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "EnhancedFramework.GameState",
-    "rootNamespace": "EnhancedFramework.GameState",
+    "name": "EnhancedFramework.GameStates",
+    "rootNamespace": "EnhancedFramework.GameStates",
     "references": [
         "EnhancedEditor",
         "EnhancedFramework.Core"
