Moved flags to EnhancedEditor

--- a/Editor/EnhancedFramework.Editor.asmdef
+++ b/Editor/EnhancedFramework.Editor.asmdef
@@ -5,6 +5,7 @@
         "EnhancedEditor",
         "EnhancedEditor.Editor",
         "EnhancedFramework.Core",
+        "EnhancedFramework.Flags",
         "EnhancedFramework.GameStates",
         "EnhancedFramework.Input",
         "Unity.InputSystem"
