--- a/UI/EnhancedFramework.UI.asmdef
+++ b/UI/EnhancedFramework.UI.asmdef
@@ -7,6 +7,7 @@
         "EnhancedEditor",
         "EnhancedFramework.Core",
         "Unity.EditorCoroutines.Editor",
+        "Unity.Localization",
         "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
@@ -21,6 +22,11 @@
             "name": "com.unity.editorcoroutines",
             "expression": "",
             "define": "EDITOR_COROUTINE_ENABLED"
+        },
+        {
+            "name": "com.unity.localization",
+            "expression": "",
+            "define": "LOCALIZATION_ENABLED"
         },
         {
             "name": "com.unity.textmeshpro",
